deploy/etherpad/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: etherpad
  annotations:
    app.openshift.io/connects-to: >-
      [{"apiVersion":"apps/v1","kind":"Deployment","name":"etherpad-db"}]
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
  template:
    spec:
      containers:
      - envFrom:
          - secretRef:
              name: etherpad-env
        image: etherpad-image:version
        imagePullPolicy: IfNotPresent
        readinessProbe:
            failureThreshold: 5
            httpGet:
              path: /
              port: 9001
              scheme: HTTP
            initialDelaySeconds: 60
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
        livenessProbe:
          initialDelaySeconds: 60
          failureThreshold: 3
          httpGet:
            path: /
            port: 9001
            scheme: HTTP
        name: etherpad
        ports:
          - containerPort: 9001
            protocol: TCP
        resources:
          limits:
            memory: 512Mi
        securityContext:
          capabilities: {}
          privileged: false
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
          - mountPath: /opt/etherpad/config
            name: etherpad-settings
      volumes:
      - configMap:
          defaultMode: 420
          name: etherpad-settings
        name: etherpad-settings
