deploy/etherpad/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: etherpad
spec:
  ports:
  - name: etherpad
    port: 9001
    protocol: TCP
    targetPort: 9001
