deploy/etherpad/base/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: etherpad
spec:
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
  to:
    name: etherpad
